

Improvements
---------------------

* GITHUB#14079: Hunspell Dictionary now supports an option to tolerate REP rule count mismatches.
  (Robert Muir)
* GITHUB#13984: Add HNSW graph checks and stats to CheckIndex

* GITHUB#14113: Remove unnecessary ByteArrayDataInput allocations from `Lucene90DocValuesProducer$TermsDict.decompressBlock`. (Ankit Jain)

Optimizations
---------------------

* GITHUB#14052: Speed up DisjunctionDISIApproximation#advance. (Adrien Grand)

* GITHUB#14080: Use the `DocIdSetIterator#loadIntoBitSet` API to speed up dense
  conjunctions. (Adrien Grand)

* GITHUB#14133: Dense blocks of postings are now encoded as bit sets.
  (Adrien Grand)

Bug Fixes
---------------------

* GITHUB#14109: prefetch may select the wrong memory segment for
  multi-segment slices. (Chris Hegarty)

* GITHUB#14123: SortingCodecReader NPE when segment has no (points, vectors, etc...) (Mike Sokolov)

Other
---------------------

* GITHUB#14081: Fix urls describing why NIOFS is not recommended for Windows (Marcel Yeonghyeon Ko)

* GITHUB#14116 Use CDL to block threads to avoid flaky tests. (Ao Li)

* GITHUB#14091: Cover all DataType. (Lu Xugang)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

* GITHUB#13998: Add IndexInput::isLoaded to determine if the contents of an
  input is resident in physical memory. (Chris Hegarty)

New Features
---------------------
* GITHUB#14034: Add support for storing term vectors in FeatureField. (Jim Ferenczi)

Improvements
---------------------
