@@ -49,6 +49,7 @@ import org.apache.lucene.search.Weight;
 import org.apache.lucene.util.BitSetIterator;
 import org.apache.lucene.util.DocIdSetBuilder;
 import org.apache.lucene.util.FixedBitSet;
+import org.apache.lucene.util.IntsRef;
 
 /**
  * Base query class for all spatial geometries: {@link LatLonShape}, {@link LatLonPoint} and {@link
@@ -446,6 +447,11 @@ abstract class SpatialQuery extends Query {
       }
 
       @Override
+      public void visit(IntsRef ref) {
+        adder.add(ref);
+      }
+
+      @Override
       public void visit(int docID, byte[] t) {
         if (leafPredicate.test(t)) {
           visit(docID);
@@ -490,6 +496,14 @@ abstract class SpatialQuery extends Query {
       }
 
       @Override
+      public void visit(IntsRef ref) {
+        for (int i = 0; i < ref.length; i++) {
+          result.set(ref.ints[ref.offset + i]);
+        }
+        cost[0] += ref.length;
+      }
+
+      @Override
       public void visit(int docID, byte[] t) {
         if (result.get(docID) == false) {
           if (leafPredicate.test(t)) {
@@ -530,6 +544,14 @@ abstract class SpatialQuery extends Query {
       public void visit(int docID) {
         result.set(docID);
         cost[0]++;
+      }
+
+      @Override
+      public void visit(IntsRef ref) {
+        for (int i = 0; i < ref.length; i++) {
+          result.set(ref.ints[ref.offset + i]);
+        }
+        cost[0] += ref.length;
       }
 
       @Override
@@ -590,6 +612,13 @@ abstract class SpatialQuery extends Query {
       }
 
       @Override
+      public void visit(IntsRef ref) {
+        for (int i = 0; i < ref.length; i++) {
+          visit(ref.ints[ref.offset + i]);
+        }
+      }
+
+      @Override
       public void visit(int docID, byte[] t) {
         if (excluded.get(docID) == false) {
           Component2D.WithinRelation within = leafFunction.apply(t);
@@ -644,6 +673,14 @@ abstract class SpatialQuery extends Query {
       }
 
       @Override
+      public void visit(IntsRef ref) {
+        for (int i = 0; i < ref.length; i++) {
+          result.clear(ref.ints[ref.offset + i]);
+        }
+        cost[0] -= ref.length;
+      }
+
+      @Override
       public void visit(DocIdSetIterator iterator) throws IOException {
         result.andNot(iterator);
         cost[0] = Math.max(0, cost[0] - iterator.cost());
@@ -691,6 +728,13 @@ abstract class SpatialQuery extends Query {
       @Override
       public void visit(DocIdSetIterator iterator) throws IOException {
         result.andNot(iterator);
+      }
+
+      @Override
+      public void visit(IntsRef ref) {
+        for (int i = 0; i < ref.length; i++) {
+          visit(ref.ints[ref.offset + i]);
+        }
       }
 
       @Override
