@@ -188,9 +188,7 @@ public abstract class PointRangeQuery extends Query {
 
           @Override
           public void visit(IntsRef ref) {
-            for (int i = ref.offset; i < ref.offset + ref.length; i++) {
-              adder.add(ref.ints[i]);
-            }
+            adder.add(ref);
           }
 
           @Override
