@@ -130,13 +130,20 @@ public class TestDocIdSetBuilder extends LuceneTestCase {
       for (j = 0; j < array.length; ) {
         final int l = TestUtil.nextInt(random(), 1, array.length - j);
         DocIdSetBuilder.BulkAdder adder = null;
-        for (int k = 0, budget = 0; k < l; ++k) {
-          if (budget == 0 || rarely()) {
-            budget = TestUtil.nextInt(random(), 1, l - k + 5);
-            adder = builder.grow(budget);
+        if (usually()) {
+          for (int k = 0, budget = 0; k < l; ++k) {
+            if (budget == 0 || rarely()) {
+              budget = TestUtil.nextInt(random(), 1, l - k + 5);
+              adder = builder.grow(budget);
+            }
+            adder.add(array[j++]);
+            budget--;
           }
-          adder.add(array[j++]);
-          budget--;
+        } else {
+          IntsRef intsRef = new IntsRef(array, j, l);
+          adder = builder.grow(l);
+          adder.add(intsRef);
+          j += l;
         }
       }
 
